Use `TensorType.equals` directly in input-signature tests.
`TensorType` overrides `equals`/`hashCode` on `(cellType, dims)` since
wala/ML#156 (verified in the 0.43.0 jar Hybridize consumes), and
`Dimension` does the same. The field-by-field comparison and the
`asShape` helper were workarounds for a non-existent gap; replace with
direct `assertEquals(expected, actual)` on `TensorType`.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>